# citus-operator

./: Cargo.toml  flake.nix  k3d.yaml
example/: sample-cluster.yaml
src/: cnpg.rs  main.rs
